k8s/base/deployment-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faceit-web
  namespace: faceit-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: faceit-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: faceit-web
    spec:
      containers:
      - name: web
        image: registry.pattmsc.online/faceit-web:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "150m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: faceit-web
  namespace: faceit-prod
spec:
  selector:
    app: faceit-web
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
