k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faceit-ingress
  namespace: faceit-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pattmsc.online
    secretName: faceit-tls
  rules:
  - host: pattmsc.online
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: faceit-api
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faceit-web
            port:
              number: 3000
